--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
     <meta charset="utf-8">
     <head>
         <title>Rock, Paper, Scissor Program</title>
+        <script src="javascript.js" defer></script>
     </head>
     <body>
-        <script src="javascript.js"></script>
+
+        <div class="container">
+            <div class="player">
+                <h1>Player</h1>
+                <img class="paper" src="images/paper.png">
+                <img class="rock" src="images/rock.png">
+                <img class="scissor" src="images/scissor.png">
+            </div>
+            <div class="bot"> 
+                <h1>Bot</h1>
+
+            </div>
+        </div>
+        <div class="score">
+            <h3>Win - Loss Counter:</h1>
+        </div>
+        
     </body>
-</html>
+</html> 
