edited file to insert image to html // edited css to organize the page a bit

--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
     <meta charset="utf-8">
     <head>
         <title>Rock, Paper, Scissor Program</title>
+        <link rel="stylesheet" href="styles.css">
         <script src="javascript.js" defer></script>
     </head>
     <body>
+        <header>Rock, Paper, Scissor</header>
 
-        <div class="container">
+        <div class="container-player">
             <div class="player">
-                <h1>Player</h1>
                 <img class="paper" src="images/paper.png">
                 <img class="rock" src="images/rock.png">
                 <img class="scissor" src="images/scissor.png">
             </div>
-            <div class="bot"> 
-                <h1>Bot</h1>
-
-            </div>
         </div>
-        <div class="score">
+        <div class="container-vs">
+            <img class="vs" src="images/vs.png">    
+        </div>
+        <div class="container-bot">
+            <div class="bot"> 
+                <img class="img-holder" src="#">
+            <div class="score">
+            </div>
+
             <h3>Win - Loss Counter:</h1>
         </div>
         
