edited html and js file to display random image or rock paper or scissor randomly upon calling function for bot player

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
         <div class="container-player">
             <div class="player">
-                <img class="paper" src="images/paper.png">
-                <img class="rock" src="images/rock.png">
-                <img class="scissor" src="images/scissor.png">
+                <img id="paper" src="images/paper.png">
+                <img id="rock" src="images/rock.png">
+                <img id="scissor" src="images/scissor.png">
             </div>
         </div>
         <div class="container-vs">
@@ -21,7 +21,7 @@
         </div>
         <div class="container-bot">
             <div class="bot"> 
-                <img class="img-holder" src="#">
+                <img id="bot-img" src="#">
             <div class="score">
             </div>
 
