edited html, js and css files - game is fully functional with win and loss tracker along with user being able to click on the image and program returning a randomly generated image

--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
-        <div class="display-text">
-            Choose - Rock, Paper or Scissors?
-        </div>
-
-        <div class="container-player">
-            <div class="player">
-                <img id="rock" src="images/rock.png">
-                <img id="paper" src="images/paper.png">
-                <img id="scissor" src="images/scissor.png">
+        <div class="main-container">
+            <div class="display-text">
+                Choose - Rock, Paper or Scissors?
             </div>
-        </div>
 
-        <div class="container-vs">
-            <p>Wins: <span id="win-score">0</span></p>
-            <img class="vs" src="images/vs.png">    
-            <p>Loses: <span id="lose-score">0</span></p>
-        </div>
+            <div class="container-player">
+                <div class="player">
+                    <img id="rock" src="images/rock.png">
+                    <img id="paper" src="images/paper.png">
+                    <img id="scissor" src="images/scissor.png">
+                </div>
+            </div>
 
-        <div class="container-bot">
-            <div class="bot"> 
-                <img id="bot-img" src="images/robot.png">
-            <div class="score">
+            <div class="container-vs">
+                <p>Wins: <span id="win-score">0</span></p>
+                <img class="vs" src="images/vs.png">    
+                <p>Losses: <span id="lose-score">0</span></p>
+            </div>
+
+            <div class="container-bot">
+                <div class="bot"> 
+                    <img id="bot-img" src="images/robot.png">
+                </div>
+            </div>
+            
+            <div class="button-restart">
+                <button>Restart Game</button>
             </div>
         </div>
 
